<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="duyguTakipGoruntuModel"
            type="com.dh.duygutakibi.duygutakip.DuyguTakipGoruntuModeli" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".duygutakip.DuyguTakipFragment">

        <Button
            android:id="@+id/baslat_butonu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/g_margin"
            android:onClick="@{() -> duyguTakipGoruntuModel.duyguTakibiniBaslat()}"
            android:text="@string/baslat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/bitir_butonu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/g_margin"
            android:onClick="@{() -> duyguTakipGoruntuModel.duyguTakibiniDurdur()}"
            android:text="@string/bitir"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/veri_temizle_butonu"
            app:layout_constraintTop_toBottomOf="@+id/baslat_butonu">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{duyguTakipGoruntuModel.duygularString}" />
        </ScrollView>

        <Button
            android:id="@+id/veri_temizle_butonu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> duyguTakipGoruntuModel.tumVeriyiSil()}"
            android:text="@string/tum_veriyi_temizle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>